envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      cors:
                        allow_origin_string_match:
                          - prefix: "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization
                        max_age: "1728000"
                      routes:
                        - match:
                            prefix: "/api"
                          route:
                            cluster: backend_cluster

                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        keycloak_auth:
                          issuer: "http://localhost:8080/realms/finance-zero-trust"
                          remote_jwks:
                            http_uri:
                              uri: "http://192.168.2.100:8080/realms/finance-zero-trust/protocol/openid-connect/certs"
                              cluster: keycloak_cluster
                              timeout: 5s
                          from_headers:
                            - name: Authorization
                              value_prefix: "Bearer"
                          forward: true
                      rules:
                        - match:
                            prefix: "/api"
                          requires:
                            provider_name: "keycloak_auth"
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      transport_api_version: V3 # Explicit V3 API :contentReference[oaicite:0]{index=0}
                      grpc_service:
                        google_grpc:
                          target_uri: opa:9191
                          stat_prefix: ext_authz
                        timeout: 1s
                      with_request_body:
                        max_request_bytes: 131072
                        allow_partial_message: true
                        pack_as_bytes: true
                      failure_mode_allow: false
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: backend_cluster
      connect_timeout: 5s
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: backend_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 192.168.2.100
                      port_value: 3000

    - name: keycloak_cluster
      connect_timeout: 5s
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: keycloak_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 192.168.2.100
                      port_value: 8080
    - name: opa_cluster
      connect_timeout: 5s
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: opa_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: opa # Docker Compose service name
                      port_value: 9191 # gRPC plugin port
